--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Những được mất sau một năm bỏ phố về biển của cô gái Gen Z",
+    "content": "Sau một năm từ bỏ nhịp sống bận rộn ở thành phố để trở về làng chài Đông Hòa, Thu Phương, một cô gái Gen Z, đã trải qua cả những lợi ích và thách thức. Cô nhận thấy sức khỏe cải thiện đáng kể, cảm thấy hạnh phúc và bình yên hơn, nhưng cũng phải đối mặt với những khó khăn về tài chính và sự cô lập. Mặc dù cuộc sống ở làng chài mang lại cho cô nhiều trải nghiệm tích cực, Thu Phương cũng thừa nhận rằng việc sống ở vùng nông thôn không phải lúc nào cũng dễ dàng và có thể không phù hợp với tất cả mọi người.",
+    "link": "https://vnexpress.net/nhung-duoc-mat-sau-mot-nam-bo-pho-ve-bien-cua-co-gai-gen-z-4860979.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Cô gái Gen Z Thu Phương đã trải qua những gì sau một năm về làng chài?",
+    "answers": [
+      {
+        "text": "Cô thấy sức khỏe tốt hơn nhưng cũng đối mặt với khó khăn tài chính.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã hoàn toàn bỏ việc và không làm gì cả.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã trở thành một người hướng dẫn lặn biển chuyên nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Cô không cảm thấy hạnh phúc khi sống ở làng chài.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Man City rơi điểm vì bàn phản lưới của trung vệ Uzbekistan",
     "content": "Trong trận đấu vòng 29 Ngoại hạng Anh diễn ra vào ngày 15/3/2025, Man City đã bị đội khách Brighton cầm hòa 2-2. Trận đấu này đã bị ảnh hưởng lớn bởi bàn phản lưới của trung vệ Abdukodir Khusanov đến từ Uzbekistan. Bàn thắng này đã khiến Man City không thể giành trọn 3 điểm trên sân nhà Etihad.",
     "link": "https://vnexpress.net/man-city-roi-diem-vi-ban-phan-luoi-cua-trung-ve-uzbekistan-4861829.html",
@@ -2902,64 +2929,6 @@
     ]
   },
   {
-    "title": "'Sát thủ' thầm lặng khiến nam giới mất cơ hội làm bố",
-    "content": "Giãn tĩnh mạch thừng tinh là một trong những nguyên nhân chính gây vô sinh ở nam giới, ảnh hưởng đến khoảng 15% nam giới trưởng thành. Tình trạng này thường không có triệu chứng rõ ràng, khiến nhiều người chỉ phát hiện khi kiểm tra sức khỏe sinh sản. Nó gây ra sự tăng nhiệt độ tại tinh hoàn và rối loạn nội tiết, làm giảm chất lượng và số lượng tinh trùng. Việc điều trị có thể bao gồm phẫu thuật hoặc các phương pháp ít xâm lấn để cải thiện lưu thông máu.",
-    "link": "https://vnexpress.net/sat-thu-tham-lang-khien-nam-gioi-mat-co-hoi-lam-bo-4858248.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Giãn tĩnh mạch thừng tinh có thể gây ra vấn đề gì cho nam giới?",
-    "answers": [
-      {
-        "text": "Vô sinh",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Mất ngủ",
-        "correct": false
-      },
-      {
-        "text": "Béo phì",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao đổ nhiều mồ hôi khi mang thai?",
-    "content": "Trong thai kỳ, tình trạng đổ nhiều mồ hôi là hiện tượng phổ biến, đặc biệt trong ba tháng đầu và ba tháng cuối. Nguyên nhân chủ yếu bao gồm sự thay đổi hormone, tăng lưu thông máu, và tốc độ trao đổi chất nhanh hơn. Ngoài ra, căng thẳng, chế độ ăn uống và một số bệnh lý như cường giáp cũng có thể góp phần làm tăng tiết mồ hôi. Nếu tình trạng này gây khó chịu, thai phụ nên đến bác sĩ để được tư vấn và loại trừ các bệnh lý tiềm ẩn.",
-    "link": "https://vnexpress.net/vi-sao-do-nhieu-mo-hoi-khi-mang-thai-4861517.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Tại sao phụ nữ mang thai lại đổ nhiều mồ hôi?",
-    "answers": [
-      {
-        "text": "Do sự thay đổi hormone trong thai kỳ.",
-        "correct": true
-      },
-      {
-        "text": "Vì ăn uống không đúng cách.",
-        "correct": false
-      },
-      {
-        "text": "Do tập thể dục quá sức.",
-        "correct": false
-      },
-      {
-        "text": "Vì căng thẳng tinh thần.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "U mùi trứng thối lan toàn thân cô gái",
     "content": "Chị Tâm, 23 tuổi, đã gặp phải tình trạng u bã đậu vỡ, gây ra nhiễm trùng và mùi hôi khó chịu. U bắt đầu xuất hiện khi chị 18 tuổi và đã lan ra khắp cơ thể. Sau khi được điều trị và phẫu thuật tại Phòng khám Đa khoa Tâm Anh, chị đã hồi phục và xuất viện. Bác sĩ khuyến cáo cần điều trị kịp thời để tránh tái phát và biến chứng nặng hơn.",
     "link": "https://vnexpress.net/u-mui-trung-thoi-lan-toan-than-co-gai-4861555.html",
@@ -3040,6 +3009,64 @@
       },
       {
         "text": "Marion 8 tuổi, James 5 tuổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Sát thủ' thầm lặng khiến nam giới mất cơ hội làm bố",
+    "content": "Giãn tĩnh mạch thừng tinh là một trong những nguyên nhân chính gây vô sinh ở nam giới, ảnh hưởng đến khoảng 15% nam giới trưởng thành. Tình trạng này thường không có triệu chứng rõ ràng, khiến nhiều người chỉ phát hiện khi kiểm tra sức khỏe sinh sản. Nó gây ra sự tăng nhiệt độ tại tinh hoàn và rối loạn nội tiết, làm giảm chất lượng và số lượng tinh trùng. Việc điều trị có thể bao gồm phẫu thuật hoặc các phương pháp ít xâm lấn để cải thiện lưu thông máu.",
+    "link": "https://vnexpress.net/sat-thu-tham-lang-khien-nam-gioi-mat-co-hoi-lam-bo-4858248.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Giãn tĩnh mạch thừng tinh có thể gây ra vấn đề gì cho nam giới?",
+    "answers": [
+      {
+        "text": "Vô sinh",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Mất ngủ",
+        "correct": false
+      },
+      {
+        "text": "Béo phì",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao đổ nhiều mồ hôi khi mang thai?",
+    "content": "Trong thai kỳ, tình trạng đổ nhiều mồ hôi là hiện tượng phổ biến, đặc biệt trong ba tháng đầu và ba tháng cuối. Nguyên nhân chủ yếu bao gồm sự thay đổi hormone, tăng lưu thông máu, và tốc độ trao đổi chất nhanh hơn. Ngoài ra, căng thẳng, chế độ ăn uống và một số bệnh lý như cường giáp cũng có thể góp phần làm tăng tiết mồ hôi. Nếu tình trạng này gây khó chịu, thai phụ nên đến bác sĩ để được tư vấn và loại trừ các bệnh lý tiềm ẩn.",
+    "link": "https://vnexpress.net/vi-sao-do-nhieu-mo-hoi-khi-mang-thai-4861517.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tại sao phụ nữ mang thai lại đổ nhiều mồ hôi?",
+    "answers": [
+      {
+        "text": "Do sự thay đổi hormone trong thai kỳ.",
+        "correct": true
+      },
+      {
+        "text": "Vì ăn uống không đúng cách.",
+        "correct": false
+      },
+      {
+        "text": "Do tập thể dục quá sức.",
+        "correct": false
+      },
+      {
+        "text": "Vì căng thẳng tinh thần.",
         "correct": false
       }
     ]
@@ -3250,6 +3277,33 @@
     ]
   },
   {
+    "title": "Chiến sự Ukraine 15/3: Từ Kursk, quân đội Nga thẳng tiến sang Sumy",
+    "content": "Quân đội Nga hiện đang tiến hành một cuộc tấn công vào vùng Sumy của Ukraine, bắt nguồn từ khu vực Kursk. Theo thông tin từ Bộ Quốc phòng Nga, quân đội Nga đã giành lại quyền kiểm soát thành phố Sudzha và một số khu vực lân cận tại Kursk, cho thấy sự gia tăng hoạt động quân sự trong khu vực này. Các chuyên gia cho rằng, tình hình ở Sumy cũng đang trở nên căng thẳng với những dấu hiệu bất thường từ phía Nga.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-tu-kursk-quan-doi-nga-thang-tien-sang-sumy-20250315063656557.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tình hình chiến sự ở vùng Sumy hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Quân đội Nga đang tấn công vào vùng Sumy từ Kursk.",
+        "correct": true
+      },
+      {
+        "text": "Ukraine đã kiểm soát hoàn toàn Sumy.",
+        "correct": false
+      },
+      {
+        "text": "Nga đã rút quân khỏi Sumy.",
+        "correct": false
+      },
+      {
+        "text": "Tình hình ở Sumy hoàn toàn bình yên.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chiến sự Ukraine 15/3: Điều kỳ lạ đang xảy ra sau khi Kiev thất thủ ở Kursk",
     "content": "Bài viết đề cập đến tình hình chiến sự Ukraine vào ngày 15/3/2025, khi lực lượng Ukraine bắt đầu rút quân khỏi mặt trận Kursk sau khi thất thủ. Kênh Military Chronicles nhận định có điều kỳ lạ xảy ra trong bối cảnh này, và các chuyên gia từ Viện Nghiên cứu Chiến tranh cho rằng Nga có thể đang thúc đẩy Mỹ xem xét lại thỏa thuận ngừng bắn với Ukraine. Chiến sự diễn biến căng thẳng với nhiều dấu hiệu bất thường từ phía Nga.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-dieu-ky-la-dang-xay-ra-sau-khi-kiev-that-thu-o-kursk-20250315063656557.htm",
@@ -3276,33 +3330,6 @@
       },
       {
         "text": "Nga không có động thái gì tại Kursk.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chiến sự Ukraine 15/3: Từ Kursk, quân đội Nga thẳng tiến sang Sumy",
-    "content": "Quân đội Nga hiện đang tiến hành một cuộc tấn công vào vùng Sumy của Ukraine, bắt nguồn từ khu vực Kursk. Theo thông tin từ Bộ Quốc phòng Nga, quân đội Nga đã giành lại quyền kiểm soát thành phố Sudzha và một số khu vực lân cận tại Kursk, cho thấy sự gia tăng hoạt động quân sự trong khu vực này. Các chuyên gia cho rằng, tình hình ở Sumy cũng đang trở nên căng thẳng với những dấu hiệu bất thường từ phía Nga.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-tu-kursk-quan-doi-nga-thang-tien-sang-sumy-20250315063656557.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tình hình chiến sự ở vùng Sumy hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Quân đội Nga đang tấn công vào vùng Sumy từ Kursk.",
-        "correct": true
-      },
-      {
-        "text": "Ukraine đã kiểm soát hoàn toàn Sumy.",
-        "correct": false
-      },
-      {
-        "text": "Nga đã rút quân khỏi Sumy.",
-        "correct": false
-      },
-      {
-        "text": "Tình hình ở Sumy hoàn toàn bình yên.",
         "correct": false
       }
     ]
@@ -3389,6 +3416,33 @@
     ]
   },
   {
+    "title": "Tin tức sáng 15-3: Một công ty ở TP.HCM bị phạt vì 'ém' nhiều báo cáo quan trọng",
+    "content": "Công ty cổ phần Lê Bảo Minh tại TP.HCM đã bị Ủy ban Chứng khoán Nhà nước xử phạt 92,5 triệu đồng do không công bố nhiều báo cáo tài chính quan trọng, bao gồm báo cáo tài chính quý 3-2024 và các báo cáo thường niên từ năm 2022 đến 2024. Công ty này cũng đã không công bố thông tin đúng thời hạn trên hệ thống thông tin của Ủy ban, vi phạm quy định trong lĩnh vực chứng khoán.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-15-3-mot-cong-ty-o-tp-hcm-bi-phat-vi-em-nhieu-bao-cao-quan-trong-20250314192310823.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Tại sao Công ty cổ phần Lê Bảo Minh bị phạt?",
+    "answers": [
+      {
+        "text": "Vì không công bố nhiều báo cáo tài chính quan trọng.",
+        "correct": true
+      },
+      {
+        "text": "Vì vi phạm quy định về an toàn lao động.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thực hiện nghĩa vụ thuế.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giấy phép kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
     "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
     "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
@@ -3469,33 +3523,6 @@
       },
       {
         "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tin tức sáng 15-3: Một công ty ở TP.HCM bị phạt vì 'ém' nhiều báo cáo quan trọng",
-    "content": "Công ty cổ phần Lê Bảo Minh tại TP.HCM đã bị Ủy ban Chứng khoán Nhà nước xử phạt 92,5 triệu đồng do không công bố nhiều báo cáo tài chính quan trọng, bao gồm báo cáo tài chính quý 3-2024 và các báo cáo thường niên từ năm 2022 đến 2024. Công ty này cũng đã không công bố thông tin đúng thời hạn trên hệ thống thông tin của Ủy ban, vi phạm quy định trong lĩnh vực chứng khoán.",
-    "link": "https://tuoitre.vn/tin-tuc-sang-15-3-mot-cong-ty-o-tp-hcm-bi-phat-vi-em-nhieu-bao-cao-quan-trong-20250314192310823.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 6,
-    "question": "Tại sao Công ty cổ phần Lê Bảo Minh bị phạt?",
-    "answers": [
-      {
-        "text": "Vì không công bố nhiều báo cáo tài chính quan trọng.",
-        "correct": true
-      },
-      {
-        "text": "Vì vi phạm quy định về an toàn lao động.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thực hiện nghĩa vụ thuế.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có giấy phép kinh doanh.",
         "correct": false
       }
     ]
@@ -3617,33 +3644,6 @@
     ]
   },
   {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -3670,6 +3670,33 @@
       },
       {
         "text": "3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
