--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Các Ngoại trưởng G7 cố tránh rạn nứt giữa cuộc chiến thuế quan của Mỹ",
+    "content": "Trong cuộc họp kéo dài ba ngày tại Canada, các ngoại trưởng G7 đã cố gắng đạt được thỏa thuận chung giữa những bất đồng về chính sách thuế quan của Mỹ và các vấn đề quốc tế khác. Ngoại trưởng Mỹ Marco Rubio đã thể hiện vai trò quan trọng trong việc thúc đẩy sự đồng thuận, bất chấp những lo ngại về quan hệ giữa Mỹ và Canada. Cuộc thảo luận còn xoay quanh các vấn đề như xung đột Ukraine và giải pháp hòa bình cho Trung Đông, trong khi các nhà ngoại giao nhấn mạnh tầm quan trọng của việc duy trì hợp tác giữa các quốc gia đồng minh.",
+    "link": "https://dantri.com.vn/the-gioi/cac-ngoai-truong-g7-co-tranh-ran-nut-giua-cuoc-chien-thue-quan-cua-my-20250315164406767.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cuộc họp G7 gần đây tập trung vào vấn đề gì?",
+    "answers": [
+      {
+        "text": "Chính sách thuế quan của Mỹ",
+        "correct": true
+      },
+      {
+        "text": "Giải quyết vấn đề nhập cư",
+        "correct": false
+      },
+      {
+        "text": "Nâng cao hợp tác quân sự",
+        "correct": false
+      },
+      {
+        "text": "Thúc đẩy thương mại tự do",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bayern rơi điểm ở Bundesliga dù cầm bóng 81%",
     "content": "Bayern Munich đã bị Union Berlin cầm chân với tỷ số 1-1 dù thống trị trận đấu với 81% thời gian kiểm soát bóng. Mặc dù Bayern có nhiều cơ hội ghi bàn và dẫn trước do công của Leroy Sane, nhưng sai lầm của hàng thủ đã khiến họ mất điểm. Đây là trận đấu thứ hai liên tiếp Bayern không thắng, sau khi thua Bochum ở vòng trước, làm tăng nguy cơ bị Leverkusen rút ngắn khoảng cách điểm số.",
     "link": "https://vnexpress.net/bayern-roi-diem-o-bundesliga-du-cam-bong-81-4861840.html",
@@ -1840,6 +1867,33 @@
     ]
   },
   {
+    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
+    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
+    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
+    "answers": [
+      {
+        "text": "Có, nếu áp dụng đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên dùng.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ mắc và tái phát zona thần kinh?",
     "content": "Bài viết đề cập đến những người có nguy cơ cao mắc và tái phát zona thần kinh, bao gồm những người mắc bệnh nền như tiểu đường, tăng huyết áp, bệnh tim mạch và rối loạn lipid máu. Các bệnh lý này làm suy giảm hệ miễn dịch, tạo điều kiện cho virus Varicella Zoster hoạt động trở lại sau thời gian 'ngủ đông'. Để phòng ngừa, bác sĩ khuyến cáo người dân nên tiêm vaccine thủy đậu và zona thần kinh, đặc biệt là cho những người từ 50 tuổi trở lên hoặc có nguy cơ cao.",
     "link": "https://vnexpress.net/ai-de-mac-va-tai-phat-zona-than-kinh-4861703.html",
@@ -1866,33 +1920,6 @@
       },
       {
         "text": "Người cao tuổi không mắc bệnh nền",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
-    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
-    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
-    "answers": [
-      {
-        "text": "Có, nếu áp dụng đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên dùng.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
         "correct": false
       }
     ]
@@ -3375,33 +3402,6 @@
     ]
   },
   {
-    "title": "Chiến sự Ukraine 15/3: Từ Kursk, quân đội Nga thẳng tiến sang Sumy",
-    "content": "Quân đội Nga hiện đang tiến hành một cuộc tấn công vào vùng Sumy của Ukraine, bắt nguồn từ khu vực Kursk. Theo thông tin từ Bộ Quốc phòng Nga, quân đội Nga đã giành lại quyền kiểm soát thành phố Sudzha và một số khu vực lân cận tại Kursk, cho thấy sự gia tăng hoạt động quân sự trong khu vực này. Các chuyên gia cho rằng, tình hình ở Sumy cũng đang trở nên căng thẳng với những dấu hiệu bất thường từ phía Nga.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-tu-kursk-quan-doi-nga-thang-tien-sang-sumy-20250315063656557.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tình hình chiến sự ở vùng Sumy hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Quân đội Nga đang tấn công vào vùng Sumy từ Kursk.",
-        "correct": true
-      },
-      {
-        "text": "Ukraine đã kiểm soát hoàn toàn Sumy.",
-        "correct": false
-      },
-      {
-        "text": "Nga đã rút quân khỏi Sumy.",
-        "correct": false
-      },
-      {
-        "text": "Tình hình ở Sumy hoàn toàn bình yên.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chiến sự Ukraine 15/3: Điều kỳ lạ đang xảy ra sau khi Kiev thất thủ ở Kursk",
     "content": "Bài viết đề cập đến tình hình chiến sự Ukraine vào ngày 15/3/2025, khi lực lượng Ukraine bắt đầu rút quân khỏi mặt trận Kursk sau khi thất thủ. Kênh Military Chronicles nhận định có điều kỳ lạ xảy ra trong bối cảnh này, và các chuyên gia từ Viện Nghiên cứu Chiến tranh cho rằng Nga có thể đang thúc đẩy Mỹ xem xét lại thỏa thuận ngừng bắn với Ukraine. Chiến sự diễn biến căng thẳng với nhiều dấu hiệu bất thường từ phía Nga.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-dieu-ky-la-dang-xay-ra-sau-khi-kiev-that-thu-o-kursk-20250315063656557.htm",
@@ -3428,6 +3428,33 @@
       },
       {
         "text": "Nga không có động thái gì tại Kursk.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 15/3: Từ Kursk, quân đội Nga thẳng tiến sang Sumy",
+    "content": "Quân đội Nga hiện đang tiến hành một cuộc tấn công vào vùng Sumy của Ukraine, bắt nguồn từ khu vực Kursk. Theo thông tin từ Bộ Quốc phòng Nga, quân đội Nga đã giành lại quyền kiểm soát thành phố Sudzha và một số khu vực lân cận tại Kursk, cho thấy sự gia tăng hoạt động quân sự trong khu vực này. Các chuyên gia cho rằng, tình hình ở Sumy cũng đang trở nên căng thẳng với những dấu hiệu bất thường từ phía Nga.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-153-tu-kursk-quan-doi-nga-thang-tien-sang-sumy-20250315063656557.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tình hình chiến sự ở vùng Sumy hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Quân đội Nga đang tấn công vào vùng Sumy từ Kursk.",
+        "correct": true
+      },
+      {
+        "text": "Ukraine đã kiểm soát hoàn toàn Sumy.",
+        "correct": false
+      },
+      {
+        "text": "Nga đã rút quân khỏi Sumy.",
+        "correct": false
+      },
+      {
+        "text": "Tình hình ở Sumy hoàn toàn bình yên.",
         "correct": false
       }
     ]
@@ -3541,28 +3568,28 @@
     ]
   },
   {
-    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
-    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
-    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
     "answers": [
       {
-        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
         "correct": true
       },
       {
-        "text": "Vì thời tiết đẹp quanh năm.",
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
         "correct": false
       },
       {
-        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
         "correct": false
       },
       {
-        "text": "Vì Việt Nam có nhiều món ăn ngon.",
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
@@ -3599,55 +3626,28 @@
     ]
   },
   {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
-    "answers": [
-      {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ronaldo bỏ vào đường hầm khi bị thay sớm",
-    "content": "Trong trận đấu giữa Al Nassr và Al Kholood tại Saudi Pro League, Cristiano Ronaldo đã thể hiện sự tức giận khi bị thay ra ở đầu hiệp hai dù Al Nassr đang dẫn 3-0. HLV Stefano Pioli đã quyết định thay Ronaldo bằng Ayman Yahya để củng cố hàng thủ sau khi đội bóng gặp bất lợi về quân số. Sau khi rời sân, Ronaldo đã bỏ vào đường hầm và chia sẻ khoảnh khắc với đồng đội trước đó. Đây là lần thứ năm mùa này anh không thi đấu trọn 90 phút.",
-    "link": "https://vnexpress.net/ronaldo-bo-vao-duong-ham-khi-bi-thay-som-4861541.html",
-    "cat": "the-thao",
-    "positivity": 5,
+    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
+    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
+    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao Ronaldo lại bỏ vào đường hầm trong trận đấu mới đây?",
+    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
     "answers": [
       {
-        "text": "Vì bị thay ra sớm trong trận đấu",
+        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
         "correct": true
       },
       {
-        "text": "Vì chấn thương trong trận",
+        "text": "Vì thời tiết đẹp quanh năm.",
         "correct": false
       },
       {
-        "text": "Vì không hài lòng với trọng tài",
+        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
         "correct": false
       },
       {
-        "text": "Vì không muốn thi đấu thêm nữa",
+        "text": "Vì Việt Nam có nhiều món ăn ngon.",
         "correct": false
       }
     ]
